# 2023-FRIB-TA-Summer-School

./: .gitignore  First code.ipynb  README.md  requirements.txt
ascsn/2023-FRIB-TA-Summer-School/: README.md
ascsn/2023-FRIB-TA-Summer-School/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
ascsn/2023-FRIB-TA-Summer-School/ghrs-data/snapshots/: 2023-09-29_030609_views_clones_series_fragment.csv  2023-09-29_231235_views_clones_series_fragment.csv  2023-09-30_231136_views_clones_series_fragment.csv  2023-10-01_231158_top_paths_snapshot.csv  2023-10-01_231158_views_clones_series_fragment.csv  2023-10-02_231242_views_clones_series_fragment.csv  2023-10-03_231213_top_paths_snapshot.csv  2023-10-03_231213_views_clones_series_fragment.csv  2023-10-04_231234_views_clones_series_fragment.csv  2023-10-05_231250_top_paths_snapshot.csv  2023-10-05_231250_views_clones_series_fragment.csv  2023-10-06_231152_views_clones_series_fragment.csv  2023-10-07_231135_top_paths_snapshot.csv  2023-10-07_231135_views_clones_series_fragment.csv  2023-10-08_231221_top_paths_snapshot.csv  2023-10-08_231221_views_clones_series_fragment.csv  2023-10-09_231259_top_paths_snapshot.csv  2023-10-09_231259_views_clones_series_fragment.csv  2023-10-10_231239_top_paths_snapshot.csv  2023-10-10_231239_views_clones_series_fragment.csv  2023-10-11_231240_top_paths_snapshot.csv  2023-10-11_231240_views_clones_series_fragment.csv  2023-10-12_231306_views_clones_series_fragment.csv  2023-10-13_231234_top_paths_snapshot.csv  2023-10-13_231234_views_clones_series_fragment.csv  2023-10-14_231141_views_clones_series_fragment.csv  2023-10-15_231230_views_clones_series_fragment.csv  2023-10-16_231301_top_paths_snapshot.csv  2023-10-16_231301_views_clones_series_fragment.csv  2023-10-17_231234_views_clones_series_fragment.csv  2023-10-18_231242_top_paths_snapshot.csv  2023-10-18_231242_views_clones_series_fragment.csv  2023-10-19_231248_top_paths_snapshot.csv  2023-10-19_231248_views_clones_series_fragment.csv  2023-10-20_231218_top_referrers_snapshot.csv  2023-10-20_231218_views_clones_series_fragment.csv  2023-10-21_231211_views_clones_series_fragment.csv  2023-10-22_231211_top_paths_snapshot.csv  2023-10-22_231211_views_clones_series_fragment.csv  2023-10-23_231316_views_clones_series_fragment.csv  (+767 more)
ascsn/2023-FRIB-TA-Summer-School/latest-report/: report.html  report.md  report_for_pdf.html
dimensionality-reduction/: CAT focus challenge.ipynb  Empirical Interpolation Challenge.ipynb  Gross-Pietaevskii Challenge.ipynb  Harmonic Oscillator Challenge.ipynb  Matrix Inverse Challenge.ipynb  Minnesota Potential Challenge.ipynb  README.md  Resonance Challenge.ipynb
experimental-control/: Experiment_Control.ipynb  README.md  secar.py
experimental-uq/: BE_theory.csv  ExptUQ_Masses.ipynb  Nuclear Densities.ipynb  README.md  frib_rates.csv
model-mixing/: BMM_Masses.csv  Challenge_Project_1.ipynb  FRIB_BMM_Hands_On_Session_1.ipynb  FRIB_BMM_Hands_On_Session_1_ANSWER_KEY.ipynb  FRIB_BMM_Hands_On_Session_2_Masses.ipynb  README.md  __init__.py
model-mixing/Challenge_Project_2/: FRIB_Challenge_2_BART_BMM.ipynb
model-mixing/openbt_mixing0.current_amd64-MPI_Ubuntu_20.04/data/: Makefile  Makefile.am  Makefile.in  aclocal.m4  ambrt.cpp  ambrt.h  ambrt.lo  amxbrt.cpp  amxbrt.h  amxbrt.lo  brt.cpp  brt.h  brt.lo  brtfuns.cpp  brtfuns.h  brtfuns.lo  brtmoves.cpp  brtmoves.lo  cli.cpp  config.status  configure  configure.ac  crn.cpp  crn.h  crn.lo  dinfo.h  example.R  libambrt.la  libamxbrt.la  libbrt.la  libcrn.la  libmbrt.la  libmxbrt.la  libpsbrt.la  libsbrt.la  libsinglebinomial.la  libsinglepoisson.la  libtool  libtree.la  mbrt.cpp  (+54 more)
model-mixing/openbt_mixing0.current_amd64-MPI_Ubuntu_20.04/data/.deps/: ambrt.Plo  amxbrt.Plo  brt.Plo  brtfuns.Plo  brtmoves.Plo  cli.Po  crn.Plo  mbrt.Plo  mixandemulate.Po  mixandemulatepred.Po  mixingwts.Po  mopareto.Po  mxbrt.Plo  pred.Po  psbrt.Plo  sbrt.Plo  singlebinomial.Plo  singlepoisson.Plo  sobol.Po  tnorm.Plo  tree.Plo  treefuns.Plo  vartivity.Po
model-mixing/openbt_mixing0.current_amd64-MPI_Ubuntu_20.04/data/.libs/: libamxbrt.lai  libamxbrt.so.0.0.0  libbrt.lai  libbrt.so.0.0.0  libcrn.lai  libcrn.so.0.0.0  libmbrt.lai  libmbrt.so.0.0.0  libmxbrt.lai  libsinglebinomial.lai  libsinglebinomial.so.0.0.0  libsinglepoisson.lai  libsinglepoisson.so.0.0.0  libtree.so.0.0.0  openbtcli  openbtmopareto  openbtpred  openbtvartivity
model-mixing/openbt_mixing0.current_amd64-MPI_Ubuntu_20.04/data/usr/local/lib/: libambrt.la  libambrt.so.0.0.0  libpsbrt.la  libpsbrt.so.0.0.0  libsbrt.la  libsbrt.so.0.0.0  libtree.la
practical-bayes/: Calibrating Liquid Drop Challenge.ipynb  Estimating Noise Level Challenge.ipynb  Model Selection Challenge.ipynb  Practical example.ipynb  README.md  Spectrum From Data.ipynb  requirements.txt
practical-emulation/: README.md
practical-emulation/BallDrop-Challenge/: BallDrop-Challenge.ipynb
practical-emulation/BallDrop-Challenge/.ipynb_checkpoints/: BallDrop-Challenge-checkpoint.ipynb
practical-emulation/NMNet/.ipynb_checkpoints/: Nuclear-Masses-checkpoint.ipynb
practical-emulation/PESnet-Challenge/: PESNet-Template.ipynb
